# VerseLog

./: .gitignore  CONTRIBUTING.fr.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  RISKS.fr.md  RISKS.md  pyproject.toml
.github/workflows/: build-linux.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffold.md  1-2-manual-capture-via-classic-ocr.md  1-3-trust-layer-validation-and-quarantine.md  1-4-voice-trigger-voiceattack-windows.md  1-5-local-vision-provider-ollama.md  1-6-hardware-benchmark-model-tier-and-worker-count.md  1-7-batch-scanning-parallel-workers.md  (+23 more)
docs/: index.html  index.md  project-review-fr.html  project-review.html
tests/: test_app.py  test_app_legality.py  test_batch_scanner.py  test_benchmark.py  test_benchmark_step.py  test_combined_route_planner.py  test_community_api_provider.py  test_component_selection_step.py  test_console_ui_provider.py  test_finish_step.py  test_fuel_override_store.py  test_hardware_estimate.py  test_installer_main.py  test_installer_wizard.py  test_legality_checker.py  test_loading_plan_calculator.py  test_location_data_provider.py  test_location_reference_store.py  test_main.py  test_manual_trigger.py  test_ocr_parser.py  test_ocr_provider.py  test_prerequisite_checker.py  test_reputation_store.py  test_route_cost_calculator.py  test_scaffold.py  test_scan_result.py  test_scan_result_declined.py  test_screenshot.py  test_settings_store.py  test_ship_reference_store.py  test_tkinter_ui_provider.py  test_trust_layer.py  test_vision_provider.py  test_voice_trigger.py
(+51 files in other folders)
