[project]
name = "verselog"
version = "0.1.0"
description = "Free, open-source logistics assistant for Star Citizen"
requires-python = ">=3.12"
license = "MIT"
dependencies = ["mss>=9", "pytesseract>=0.3", "Pillow>=11", "ollama>=0.4", "requests>=2.32"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verselog"]
